syntax = "proto3";

package demo;

option go_package = "api/v1/protoc";

import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message CreateTodo {
  string name = 1;
}

message Todo {
  string name = 1;
  int32 id = 2;
}

message Todos {
  repeated Todo todos = 1;
}

message TodoId {
  int32 id = 1;
}

message ConfirmMessage {
  string message = 1;
}


service TodoManager {
  rpc CreateTodoItem(CreateTodo) returns (Todo) {
    option(google.api.http) = {
      post: "/api/v1/todo",
      body: "*"
    };
  }

  rpc GetTodoList(google.protobuf.Empty) returns (Todos) {
    option(google.api.http) = {
      get: "/api/v1/todo",
    };
  }

  rpc GetTodoItemByID(TodoId) returns (Todo) {
    option(google.api.http) = {
      get: "/api/v1/todo/{id}",
    };
  }

  rpc DeleteTodo(TodoId) returns (ConfirmMessage) {
    option(google.api.http) = {
      delete: "/api/v1/todo/{id}",
    };
  }

  rpc UpdateTodo(Todo) returns (Todo) {
    option(google.api.http) = {
      put: "/api/v1/todo/{id}",
      body: "*"
    };
  }
}

